# aml-trading-anomaly

./: .gitignore  AML ANOMALY DETECTION PROJECT.md  CLAUDE.md  README.md  USING_YOUR_OWN_DATA.md  pyproject.toml  run_all.py
notebooks/: 01_data_exploration.ipynb  02_feature_engineering.ipynb  03_pca_analysis.ipynb  04_model_training.ipynb  05_scoring_holdout.ipynb  06_results_review.ipynb
src/aml_anomaly/: __init__.py
src/aml_anomaly/data_gen/: __init__.py  accounts.py  securities.py  trades.py
src/aml_anomaly/features/: behavioral.py  concentration.py  network.py  pipeline.py  velocity.py
src/aml_anomaly/models/: dimensionality.py  ensemble.py  isolation_forest.py  lof.py  score.py  train.py
src/aml_anomaly/reporting/: __init__.py  export.py  flags.py
