[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aml-anomaly"
version = "0.1.0"
description = "AML stock trading anomaly detection framework"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "faker>=24.0",
    "scipy>=1.12",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "jupyter>=1.0",
    "ipykernel>=6.0",
    "pandas-stubs>=2.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/aml_anomaly"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
